--- a/templates/application.html
+++ b/templates/application.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="<%= assetPath("images/favicon.ico") %>">
   </head>
   <body>
-
-    <div class="container">
+    <%= partial("header.html") %>
+    <div class="container-fluid">
       <%= partial("flash.html") %>
       <%= yield %>
     </div>
